# IBP-I

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  guaranteed_service_model.ipynb  pyproject.toml  safety_stock_playground.ipynb  stochastic_service_model_examples.ipynb
.github/workflows/: ci.yml
examples/: scenarios.json
src/safety_stock/: __init__.py  api.py  calculator.py  cli.py  config.py  logging_config.py  models.py
tests/: test_api.py  test_calculator.py  test_validation_and_cli.py
