[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-echelon-safety-stock"
version = "0.1.0"
description = "State-of-the-art single-echelon safety stock calculator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "IBP-I" }]
license = { file = "LICENSE" }
keywords = ["supply-chain", "inventory", "safety-stock", "single-echelon"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "anyio[trio]>=4.0",
  "pytest-anyio>=0.0.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
safety-stock = "safety_stock.cli:main"
safety-stock-api = "safety_stock.api:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
